<resources>
    <string name="app_name">Vinilos</string>

    <!-- Welcome Screen -->
    <string name="welcome_subtitle">Selecciona tu perfil para continuar</string>

    <!-- Visitor profile -->
    <string name="visitor_title">Usuario Visitante</string>
    <string name="visitor_description">Explora el catálogo, descubre nuevos artistas y escucha muestras sin necesidad de registrarte.</string>
    <string name="visitor_icon_desc">Icono visitante</string>

    <!-- Collector profile -->
    <string name="collector_title">Coleccionista</string>
    <string name="collector_description">Gestiona tu colección, crea listas de deseos y conecta con otros amantes del vinilo.</string>
    <string name="collector_icon_desc">Icono coleccionista</string>

    <!-- Album list -->
    <string name="album_cover_desc">Portada del álbum</string>
    <string name="greeting">BIENVENIDO</string>
    <string name="trending_albums">Álbumes en tendencia</string>
    <string name="see_all">Ver todos</string>
    <string name="recently_added">Agregados recientemente</string>
    <string name="fab_add_desc">Agregar álbum</string>

    <!-- Musician list -->
    <string name="artists_title">Artistas</string>
    <string name="musician_photo_desc">Foto del artista</string>

    <!-- Collector list -->
    <string name="collectors_title">Coleccionistas</string>
    <string name="collector_photo_desc">Foto del coleccionista</string>
    <string name="go_to_detail">Ir al detalle</string>

    <!-- Collector Detail -->
    <string name="collector_detail_title">Detalle del Coleccionista</string>
    <string name="collector_contact_email">Correo de contacto</string>
    <string name="collector_contact_telephone">Teléfono</string>
    <string name="collector_musical_tastes">Gustos musicales</string>
    <string name="collector_no_tastes">Sin géneros preferidos</string>
    <string name="collector_no_telephone">No disponible</string>
    <string name="collector_invalid_id">No se recibió un ID válido de coleccionista.</string>

    <!-- Create Album -->
    <string name="create_album_title">Crear Álbum</string>
    <string name="hint_album_name">Nombre del Álbum</string>
    <string name="hint_artist">Artista</string>
    <string name="hint_release_date">Fecha de lanzamiento</string>
    <string name="hint_record_label">Sello discográfico</string>
    <string name="hint_genre">Género</string>
    <string name="hint_description">Descripción</string>
    <string name="btn_save">Guardar</string>
    <string name="error_required_field">Campo requerido</string>
    <string name="error_invalid_date">Selecciona una fecha válida</string>
    <string name="create_album_success">¡Álbum creado exitosamente!</string>
    <string name="hint_album_cover">Añadir portada</string>
</resources>

